[workspace]

members = [
  "filecoin-proofs",
  "storage-proofs",
  "storage-proofs/core",
  "storage-proofs/porep",
  "storage-proofs/post",
  "fil-proofs-tooling",
  "sha2raw"
]

[patch.crates-io]
bellperson = { git = "https://github.com/filecoin-project/bellman", branch = "blstrs" }
rust-gpu-tools = { git = "https://github.com/filecoin-project/rust-gpu-tools", branch = "avoid-find-platform" }
